add info do time e as noticias no chat

--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -19,6 +19,13 @@
     gap: 8px;
 }
 
+.chat-box .message img {
+    max-width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+
 .message {
     padding: 10px;
     border-radius: 8px;
