--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -1,4 +1,6 @@
 .chat-container {
+    position: relative;
+    overflow: hidden;
     background-color: #dcdcdc;
     max-width: 800px;
     margin: 50px auto;
@@ -7,7 +9,29 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    height: 600px;
+    height: 700px;
+}
+
+.chat-container::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    background-image: url('/furia.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0.08;
+    z-index: 0;
+    transform: translate(-50%, -50%);
+}
+
+
+.chat-box, .input-container {
+    position: relative;
+    z-index: 1;
 }
 
 .chat-box {
